--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
           <div class="col-12 col-md-6 my-auto my-auto">
             <h3>¿Cuál es el estado de la epidemia?</h3>
             <p class="lead">
-              <p>El país se encuentra claramente en el descenso de la tercera "ola" epidémica, con todos los indicadores mejorando, aunque hay <a href="./estados#estados_casos_100mil">diferencias</a> <a href="./estados#estados_casos1">entre estados</a> y <a href="./municipios#top_zm_casos">zonas metropolitanas</a>. Al mismo tiempo, los <a href="./muertes#muertes_tipomun">fallecimientos</a> no se han incrementado tan rápidamente como en "olas" anteriores debido a la <a href="./clinicos#mortalidad_edad_tipomun">vacunación</a> .</p>
+              <p>La epidemia en el país acumula meses en descenso sostenido, con todos los indicadores mejorando, aunque hay <a href="./estados#estados_casos_100mil">diferencias</a> <a href="./estados#estados_casos1">entre estados</a> y <a href="./municipios#top_zm_casos">zonas metropolitanas</a>. Al mismo tiempo, los <a href="./muertes#muertes_tipomun">fallecimientos</a> se mantienen muy por debajo que en momentos anteriores gracias a la <a href="./clinicos#mortalidad_edad_tipomun">vacunación</a> .</p>
 <p>La gráfica muestra el número de casos registrados (barras) y utiliza <a href="https://gabgoh.github.io/COVID/index.html" target="_blank">modelo epidemiológico SEIR</a> para estimar el estado más probable de la epidemia al día de hoy (áreas sombreadas). La estimación se realiza con <a href="https://github.com/coronamex/visualizando/blob/master/casos/stan_seir.r" target="_blank">este código</a> y los valores numéricos están <a href="https://github.com/coronamex/visualizando/tree/master/estimados" target="_blank">aquí</a>. Sólo se usan los últimos 6 meses.</p>
 <p>Ningún modelo captura la realidad completa, este modelo no puede pronosticar un futuro lejano, ni estima el sub-registro de casos (para eso está el sistema <a href="./casos#sir_centinela"> Centinela</a>). Este modelo tampoco considera variaciones locales <a href="./estados#r_efectiva">entre</a> <a href="./estados#estados_casos_100mil">estados</a> y <a href="./municipios#vm_casos">zonas</a> <a href="./municipios#top_zm_casos.md">metropolitanas</a>. Por otro lado, este modelo sí puede usarse para medir el <a href="./casos#aplanamiento">aplanado de la curva</a>.</p> 
             </p>
@@ -438,9 +438,9 @@
             />
           </div>
           <div class="col-12 col-md-6 my-auto my-auto">
-            <h3>El mundo está en la cuarta &#34;ola&#34;</h3>
+            <h3>La pandemia continúa</h3>
             <p class="lead">
-              <p>En México ha habido <a href="./muertes#muertes_tipomun">tres</a> <a href="./muertes#exceso_mortalidad_nacional">grandes</a> "olas" de mortalidad por COVID-19 en lo que va de la pandemia. Sin embargo, a nivel mundial nos encontramos en medio de la cuarta. La primera "ola" mundial ocurrió entre abril y mayo de 2020, la segunda entre noviembre de 2020 y febrero de 2021, la tercera entre abril y junio de 2021, y desde hace un par de semanas parece que ha iniciado la cuarta "ola". Los países más afectados han cambiado con el tiempo y ahora parece que se concentra en lugares y poblaciones que no han podido acceder a la vacunación.</p>
+              <p>A nivel mundial, la pandemia sigue cobrando miles de vidas cada día. Después la gran "ola" epidémica de principios de 2020 que afectó a todo el mundo, ha habido múltiples "olas" sucesivas que han afectado a diferentes regiones, aunque estas "olas" han sido progresivamente menos mortales gracias a la vacunación, no hay razones para pensar que van a desaparecer hasta que se logre vacunar a todo el mundo de forma equitativa.</p>
 <p>La gráfica muestra el número de muertes (en una ventana deslizante de 7 días) en los 9 países con la mayor cantidad de muertes confirmadas por COVID-19, así como el resto del Mundo.</p>
             </p>
               
