--- a/etiquetas/muertes/index.html
+++ b/etiquetas/muertes/index.html
@@ -381,9 +381,9 @@
             />
           </div>
           <div class="col-12 col-md-6 my-auto my-auto">
-            <h3>El mundo está en la cuarta &#34;ola&#34;</h3>
+            <h3>La pandemia continúa</h3>
             <p class="lead">
-              <p>En México ha habido <a href="../../muertes#muertes_tipomun">tres</a> <a href="../../muertes#exceso_mortalidad_nacional">grandes</a> "olas" de mortalidad por COVID-19 en lo que va de la pandemia. Sin embargo, a nivel mundial nos encontramos en medio de la cuarta. La primera "ola" mundial ocurrió entre abril y mayo de 2020, la segunda entre noviembre de 2020 y febrero de 2021, la tercera entre abril y junio de 2021, y desde hace un par de semanas parece que ha iniciado la cuarta "ola". Los países más afectados han cambiado con el tiempo y ahora parece que se concentra en lugares y poblaciones que no han podido acceder a la vacunación.</p>
+              <p>A nivel mundial, la pandemia sigue cobrando miles de vidas cada día. Después la gran "ola" epidémica de principios de 2020 que afectó a todo el mundo, ha habido múltiples "olas" sucesivas que han afectado a diferentes regiones, aunque estas "olas" han sido progresivamente menos mortales gracias a la vacunación, no hay razones para pensar que van a desaparecer hasta que se logre vacunar a todo el mundo de forma equitativa.</p>
 <p>La gráfica muestra el número de muertes (en una ventana deslizante de 7 días) en los 9 países con la mayor cantidad de muertes confirmadas por COVID-19, así como el resto del Mundo.</p>
             </p>
               
