--- a/etiquetas/nacional/index.html
+++ b/etiquetas/nacional/index.html
@@ -751,7 +751,7 @@
             />
           </div>
           <div class="col-12 col-md-6 my-auto my-auto">
-            <h3>La segunda ola es diferente</h3>
+            <h3>Cada &#34;ola&#34; es diferente</h3>
             <p class="lead">
               <p>Cada <a href="https://es.wikipedia.org/wiki/Anexo:Zonas_económicas_de_México" target="_blank">región geográfica</a> del país ha sido afectada de manera diferente y en diferentes momentos.</p>
 <p>La primera "ola" inició en la zona Centrosur, que incluye al <a href="../../municipios#vm_casos">Valle de México</a>, y llegó relativamente tarde a las regiones Centronorte, Noreste y Occidente, pero estas regiones nunca lograron salir de esta primera "ola" antes de la segunda. Por otro lado las regiones Sureste y Suroeste fueron afectadas el verano pasado y, hasta el momento, no han sido afectadas tan gravemente por la segunda "ola", aunque esto siempre puede cambiar.</p>
