--- a/etiquetas/muertes/index.html
+++ b/etiquetas/muertes/index.html
@@ -351,17 +351,16 @@
             <img
               class="lozad img-responsive image-right-overflow"
               src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-              data-src="https://coronamex.github.io/imagenes/mortalidad_edad_tipomun.png"
-              data-srcset="https://coronamex.github.io/imagenes/mortalidad_edad_tipomun.png 1x, https://coronamex.github.io/imagenes/mortalidad_edad_tipomun@2x.png 2x"
+              data-src="https://coronamex.github.io/imagenes/mortalidad_edad.png"
+              data-srcset="https://coronamex.github.io/imagenes/mortalidad_edad.png 1x, https://coronamex.github.io/imagenes/mortalidad_edad@2x.png 2x"
               alt="Mortalidad en ventana móvil de 7 días y como proporción del máximo de cada &#34;ola&#34; por edad y tipo de municipio días después de cada &#34;ola&#34;."
             />
           </div>
           <div class="col-12 col-md-6 my-auto my-auto">
-            <h3>La vacunación funciona pero toma tiempo</h3>
+            <h3>La vacunación funciona</h3>
             <p class="lead">
-              <p>En México y en el mundo, la vacunación ha sido por orden de edad. Como resultado vemos que la mortalidad en la segunda "ola" afectó a toda la población, mientras que la tercera "ola" afectó a gente más jóven que todavía no se había vacunado.</p>
-<p>Ahora que inicia <a href="../../casos#sir">la cuarta "ola"</a> es importante que la mortalidad no se ha incrementado porque las vacunas siguen funcionando. Esto no quiere decir que podamos bajar la guardia porque si muchísima gente se contagia, los fallecimientos pueden ser muchos aunque representen a una proporción pequeña de los contagios</p>
-<p>La lección es que hay que vacunarse cuanto antes si no lo hemos hecho.</p>
+              <p>El COVID-19 es más peligroso para las personas de más edad y por lo tanto la vacunación en México y el Mundo se organizado por grupos de edad. Como resultado vemos que las primeras dos "olas" que ocurrieron antes de la vacunación, tuvieron el mismo perfil de mortalidad por edades, mientras que una vez que inició la vacunación (en medio de la tecera "ola"), la mortalidad empezó a disminuir progresivamente en los grupos de edad vacunados.</p>
+<p>Es importante que aunque la cuarta "ola" tuvo un gran número de casos, la vacunación siguió protegiendo a todos las personas vacunadas. La lección es que hay que vacunarse cuanto antes si no lo hemos hecho.</p>
             </p>
               
           </div>
