--- a/muertes/muertes_tipomun/index.html
+++ b/muertes/muertes_tipomun/index.html
@@ -328,8 +328,8 @@
           <h2>La epidemia sigue cobrando vidas</h2>
           <p class="lead">
             <p>Esta gráfica muestra el número de fallecimientos confirmados por COVID-19 en el país que corresponden al <a href="../../municipios#vm_casos">Valle de México</a>, <a href="../../municipios#top_zm_casos">otras</a> <a href="../../municipios#top_zm_casos2">zonas</a> <a href="../../municipios#top_zm_casos3">metropolitanas</a>, y zonas no metropolitanas. Los fallecimientos siguen dismimuyendo lentamente, pero se espera que esto se revierta durante esta cuarta "ola".</p>
-<p>La mortalidad ha aumentado durante esta cuarta "ola" aunque se mantiene por debajo que en "olas" anteriores. Es claro que <a href="../../clinicos#mortalidad_edad_tipomun">la vacunación</a> <a href="../../clinicos#casos_def_por_edad">funciona</a>. Sin embargo, el <a href="../../casos#sir"> aumento en los contagios</a>, significa que hay que mantener todas las precauciones y vacunarse lo antes posible.</p>
-<p>Los fallecimientos confirmados no son la unica consecuencia mortal de la epidemia. El <a href="../../muertes#exceso_mortalidad_nacional">exceso de mortalidad</a> puede usarse para medir las consecuencias directas e indirectas del COVID-19.</p>
+<p>Después de la cuarta "ola" la mortalidad a disminuid a sus niveles más bajos desde el inicio de la pandemia. Es claro que <a href="../../clinicos#mortalidad_edad_tipomun">la vacunación</a> <a href="../../clinicos#casos_def_por_edad">funciona</a>. Es imposible predecir cuál será la mortalidad en "olas" futuras, nuestra mejor defensa es la vacunación.</p>
+<p>Los fallecimientos confirmados no son la única consecuencia mortal de la epidemia. El <a href="../../muertes#exceso_mortalidad_nacional">exceso de mortalidad</a> puede usarse para medir las consecuencias directas e indirectas del COVID-19.</p>
           </p>
             
         </div>
